work on overflow issues

--- a/src/assets/reset.css
+++ b/src/assets/reset.css
@@ -42,4 +42,9 @@ body {
     color: #000000;
     font-size: 1.4rem;
 }
-/* RESETS */
+@media screen and (max-width: 600px) {
+    .card, .card-text {
+        font-size: 1.0rem;
+    }
+    }
+    /* RESETS */
